--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev:api":"wrangler dev api/index.js",
+    "dev:api": "wrangler dev api/index.js",
     "publish:api": "wrangler publish api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,11 @@
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
+    "standard": "^17.0.0",
     "vitest": "^0.26.3",
     "wrangler": "^2.6.2"
+  },
+  "eslintConfig": {
+    "extends":"standard"
   }
 }
