--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "standard": "^17.0.0",
     "vitest": "^0.26.3",
-    "wrangler": "^2.6.2"
+    "wrangler": ">=3.1.1"
   },
   "eslintConfig": {
     "extends":"standard"
