--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
-    "hono": "^2.7.2",
+    "hono": ">=3.11.7",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
